tests/typecheck/bad/parsing_hex_literals.scilla
let b = 0x424 in
b

